# search_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test.cpp
include/: ConvertJSON.h  ConverterJSON.h  InvertedIndex.h  SearchServer.h  searchFiles.h
resources/: answers.json  config.json  requests.json
src/: ConvertJSON.cpp  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  searchFiles.cpp
